--- a/index.html
+++ b/index.html
@@ -99,6 +99,52 @@
         <link rel="stylesheet" href="./assets/css/responsive.css" />
     </head>
     <body>
-        <h1>Hello</h1>
+        <header class="header">
+            <div class="container">
+                <div class="header__inner">
+                    <div>
+                        <div class="email-link">
+                            <figure class="email-img">
+                                <img
+                                    src="./assets/icons/envelope.png"
+                                    alt="Email"
+                                    class="email-icon"
+                                />
+                            </figure>
+                            <a
+                                href="mailto:phongtranhk20@gmail.com"
+                                class="email-name"
+                            >
+                                phongtranhk20@gmail.com
+                            </a>
+                        </div>
+
+                        <figure class="profile-img">
+                            <img
+                                src="./assets/icons/profile-icon.png"
+                                alt="Icon"
+                                class="profile-icon"
+                            />
+                        </figure>
+                    </div>
+                    <div class="nav-list">
+                        <ul>
+                            <li class="nav-item">
+                                <a href="#!" class="nav-link">Projects</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#!" class="nav-link">Journey</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#!" class="nav-link">Service</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#!" class="nav-link">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
