--- a/index.html
+++ b/index.html
@@ -254,5 +254,71 @@
                 </div>
             </div>
         </section>
+        <main style="height: 5000px">
+            <!-- Branch -->
+            <section class="branch">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-12">
+                            <div class="branch-row">
+                                <h2 class="branch-subheading">
+                                    Meet my recent clients
+                                </h2>
+                                <div class="logo-branch">
+                                    <div class="logo-branch-media">
+                                        <img
+                                            src="./assets/icons/Google.svg"
+                                            alt=""
+                                            class="logo-branch-icon"
+                                        />
+                                        <img
+                                            src="./assets/icons/Upwork.svg"
+                                            alt=""
+                                            class="logo-branch-icon"
+                                        />
+                                    </div>
+                                    <div class="logo-branch-media">
+                                        <img
+                                            src="./assets/icons/warner bros.svg"
+                                            alt=""
+                                            class="logo-branch-icon"
+                                        />
+                                        <img
+                                            src="./assets/icons/Creative cloude.svg"
+                                            alt=""
+                                            class="logo-branch-icon"
+                                        />
+                                    </div>
+                                    <div class="logo-branch-media">
+                                        <img
+                                            src="./assets/icons/Mailchamp.svg"
+                                            alt=""
+                                            class="logo-branch-icon"
+                                        />
+                                        <img
+                                            src="./assets/icons/Woocommercde.svg"
+                                            alt=""
+                                            class="logo-branch-icon"
+                                        />
+                                    </div>
+                                    <div class="logo-branch-media">
+                                        <img
+                                            src="./assets/icons/Adobe.svg"
+                                            alt=""
+                                            class="logo-branch-icon"
+                                        />
+                                        <img
+                                            src="./assets/icons/Canva.svg"
+                                            alt=""
+                                            class="logo-branch-icon"
+                                        />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
